plugins {
    id 'fabric-loom' version '1.17.19'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
}

loom {
    noIntermediateMappings()
    runs {
        client {
            vmArg "-Dfabric.runtimeMappingNamespace=named"
        }
        server {
            vmArg "-Dfabric.runtimeMappingNamespace=named"
        }
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.layered {
        mappings file("mappings/empty.tiny")
    }
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    testImplementation platform("org.junit:junit-bom:5.11.3")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testImplementation "org.mockito:mockito-core:5.14.2"
    testImplementation "org.mockito:mockito-junit-jupiter:5.14.2"
}

processResources {
    inputs.property "version", project.version
    inputs.property "apocalypse_version", project.apocalypse_version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
    filesMatching("flansmodapocalypse.mod.json") {
        expand "apocalypse_version": project.apocalypse_version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
    it.options.compilerArgs += ['-Xmaxerrs', '20000']
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    inputs.property "archivesName", project.base.archivesName
}

test {
    dependsOn remapJar
    useJUnitPlatform()
}
